# kubekarma

./: .dockerignore  .gitignore  .importlinter  .mypy.ini  LICENSE  Makefile  buf.gen.yaml  cr.yaml  go.mod  go.sum  index.yaml  minikube  operator.Dockerfile  package-lock.json  package.json  pyproject.toml  readme.md  requirements.controller.txt  requirements.dev.txt  requirements.test.txt  requirements.worker.txt  requiriments.worker.txt  skaffold.yaml  tox.ini  worker.Dockerfile
.github/workflows/: build-images.yaml  chart-lint-test.yaml  ci-any-branch.yaml  ci-tags.yaml  ci.yaml  release-chart.yaml  test-python.yaml  workflow-docker-images.yaml  workflow-python-checks.yaml
chart/: values.yaml
chart/crds/: NetworkPolicyTestSuite.yaml  NetworkTestSuite.yaml
chart/templates/: _helpers.tpl  deployment.yaml  rbac.yaml  service.yaml
charts/kubekarma/: Chart.yaml  values.schema.json  values.yaml
dev/: set-image  values.yaml
docs/: development.md  minikube  test suite.md  usage.md  workflow.md
docs/docusaurus/: docusaurus.config.js 
examples/NetworkPolicyTestSuite/: test_with_all_asserts.yaml
examples/NetworkTestSuite/: test_with_all_asserts.yaml
kubekarma/: readme.md
kubekarma/controlleroperator/: __init__.py  config.py  envs.py  helpers.py  httpserver.py  kopfmain.py  resultspublisher.py  testresultspublisher.py
kubekarma/crddefinitions/: networkpolicytestsuite.py  networktestsuite.py
kubekarma/dto/: executiontask.py  genericcrd.py
protobuf/: buf.yaml  readme.md
protos/: readme.md
skaffold/: set-image  test-chart
tests/: namespace.yaml
(+117 files in other folders)
